--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>CocDocs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="shortcut icon" href="/assets/images/favicon.ico">
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
